Add a new field to in-core znode, z_rdev, to represent device nodes.

PR:		kern/159010
Reviewed by:	mm@
Approved by:	re (kib)
MFC after:	2 weeks