sys/cddl/contrib/opensolaris/uts/common/fs/zfs/zfs_vnops.c
@@ -2694,7 +2694,7 @@ zfs_getattr(vnode_t *vp, vattr_t *vap, int flags, cred_t *cr,
 	vap->va_nlink = MIN(links, UINT32_MAX);	/* nlink_t limit! */
 	vap->va_size = zp->z_size;
 	vap->va_fsid = vp->v_mount->mnt_stat.f_fsid.val[0];
-//	vap->va_rdev = zfs_cmpldev(pzp->zp_rdev);
+	vap->va_rdev = zp->z_rdev;
 	vap->va_seq = zp->z_seq;
 	vap->va_flags = 0;	/* FreeBSD: Reset chflags(2) flags. */
 
